Mon Mar  1 00:51:11 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: News for 2.3.5.

Sun Feb 29 23:25:35 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentry.c (gtk_entry_completion_key_press): 
	Fix the Shift-Tab support to go backwards.

Sun Feb 29 16:40:40 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_class_init): Fix 
	capitalization to match other style properties.

Sun Feb 29 16:38:53 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_class_init): Fix a
	typo in property string.

Sun Feb 29 16:35:23 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpango.c gtk/gtktextdisplay.c: Implement
	PANGO_UNDERLINE_ERROR (Based on a patch by
	Nicolas Setton, #114237)

	* gtk/gtktextview.c: Add a error-underline-color style
	property.

Sun Feb 29 19:04:33 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkrange.c (_gtk_range_get_wheel_delta): New internal
	function returning a good step value for the mouse wheel. For
	scrollbars, base the step on page_size^(2/3), for other ranges,
	use 2 * step_increment.

	* gtk/gtkrange.c (gtk_range_scroll_event): Use it here ...

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_scroll_event): 
	... and here.

	* gtk/gtkmenu.c (gtk_menu_leave_notify): Fix a warning.

Sun Feb 29 01:51:27 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserembed.c
	(_gtk_file_chooser_embed_get_default_size):  Add g_return_if_fail()
	(_gtk_file_chooser_embed_get_resizable_hints): Add g_return_if_fail()

	* gtk/gtkfilechooserdialog.c
	(file_chooser_widget_default_size_changed): Get the correct
	initial size for the dialog.  Also, don't bother with
	gtk_window_set_default_size().  It's not really meaningful.

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_get_default_size): Get the correct
	spacing for the preview_widget
	(update_preview_widget_visibility): Clear widget field after we
	destroy it.

2004-02-29  Federico Mena Quintero  <federico@ximian.com>
